# QT_Projects

./: .gitignore  README.md
Application/: CMakeLists.txt  Fenetre.cpp  Fenetre.h  Widget.cpp  Widget.h  main.cpp
Application/.qt/: QtDeploySupport.cmake
Application2/: CMakeLists.txt  MyWindow.cpp  MyWindow.h  main.cpp
Application3/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
Application4/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
Application5/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
Application6/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
